--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -13,8 +13,10 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{betId}" class="form-control" />
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
-					<input type="hidden" th:field="*{teamNameOne}" class="form-control" />
-					<input type="hidden" th:field="*{teamNameTwo}" class="form-control" />
+					<input type="hidden" th:field="*{countryTeamOne}" class="form-control" />
+					<input type="hidden" th:field="*{countryTeamTwo}" class="form-control" />
+					<input type="hidden" th:field="*{nameTeamOne}" class="form-control" />
+					<input type="hidden" th:field="*{nameTeamTwo}" class="form-control" />
 					<input type="hidden" th:field="*{redirectViewName}" class="form-control" />
 					<div class="form-group">
 						<table class="table center">
