--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -30,7 +30,7 @@
 							<div class="row center">
 								<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}} + '?redirectViewName=OPEN_BETS'" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'" 
 									class="btn btn-success" role="button">
-									<span class="glyphicon glyphicon-hand-up"></span>
+									<span class="fa fa-cube fa-lg"></span>
 								</a>
        						</div>
       					</div>
