--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -32,26 +32,26 @@
 							<div class="row">
 								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
-										<img th:src="@{/images/final_flag.png}" title="Ergebnis"/>
+										<span class="fa fa-cube fa-2x" title="getippt"></span>
 									</div>
-									<div class="short-div goal_padding">										
-										<img th:src="@{/images/gaming_cube.png}" title="getippt"/>
+									<div class="short-div goal_padding">
+										<span class="fa fa-futbol-o fa-2x" title="Ergebnis"></span>
 									</div>							  									  		
 					  			</div>					
 					  			<div class="col-xs-4 goal-badges">				
 					  				<div class="short-div goal_padding_bigger">
-					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
-					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
-								  		<span> : </span>
-							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultTwo != null} ? label-info : label-default" 
-							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
-					  				</div>	  				
-					  				<div class="short-div goal_padding">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.userBetGoalsTeamOne != null} ? label-success : label-default" 
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
 								  		<span> : </span>
 							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.userBetGoalsTeamTwo != null} ? label-success : label-default" 
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}"></span>
+					  				</div>	  				
+					  				<div class="short-div goal_padding">
+					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
+					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
+								  		<span> : </span>
+							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultTwo != null} ? label-info : label-default" 
+							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
 					  				</div>
 					  			</div>  			
 					  			<div class="col-xs-6 button-bar">
@@ -62,11 +62,11 @@
 				            			</a>
 				            			<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matches/matchresult/' + ${matchCommand.matchId}}" 
 				            			        class="btn btn-info" role="button" title="Ergebnis eingeben">
-				            					<span class="glyphicon glyphicon-ok"></span>
+				            					<span class="fa fa-futbol-o fa-lg"></span>
 				            			</a>
 				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
 												   class="btn btn-success" role="button" title="Spiel tippen">
-											<span class="glyphicon glyphicon-hand-up"></span>
+											<span class="fa fa-cube fa-lg"></span>
 										</a>
 							        </div>
 	       						</div>	       						
