--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -35,7 +35,7 @@
 										<span class="fa fa-cube fa-2x" title="getippt"></span>
 									</div>
 									<div class="short-div goal_padding">
-										<span class="fa fa-futbol-o fa-2x" title="Ergebnis"></span>
+										<span class="fa fa-trophy fa-2x" title="Ergebnis"></span>
 									</div>							  									  		
 					  			</div>					
 					  			<div class="col-xs-4 goal-badges">				
@@ -62,7 +62,7 @@
 				            			</a>
 				            			<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matches/matchresult/' + ${matchCommand.matchId}}" 
 				            			        class="btn btn-info" role="button" title="Ergebnis eingeben">
-				            					<span class="fa fa-futbol-o fa-lg"></span>
+				            					<span class="fa fa-trophy fa-lg"></span>
 				            			</a>
 				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
 												   class="btn btn-success" role="button" title="Spiel tippen">
