--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -32,7 +32,7 @@
 							<div class="row">
 								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
-										<span class="fa fa-thumbs-up fa-2x" title="getippt"></span>
+										<span class="fa fa-thumbs-o-up fa-2x" title="getippt"></span>
 									</div>
 									<div class="short-div goal_padding">
 										<span class="fa fa-trophy fa-2x" title="Ergebnis"></span>
@@ -66,7 +66,7 @@
 				            			</a>
 				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
 												   class="btn btn-success" role="button" title="Spiel tippen">
-											<span class="fa fa-thumbs-up fa-lg"></span>
+											<span class="fa fa-thumbs-o-up fa-lg"></span>
 										</a>
 							        </div>
 	       						</div>	       						
