--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -31,13 +31,14 @@
 							<div class="col-xs-6">
 								<span th:text="${bet.userName}" class="ranking-name"></span>			  									  		
 				  			</div>					
-				  			<div class="col-xs-6 goal-badges">				
-				  				<div class="short-div goal_padding_bigger">
-				  					<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamOne}"></span>
-							  		<span> : </span>
-						  			<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamTwo}"></span>
-				  				</div>	  			
+				  			<div class="col-xs-4">				
+				  				<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamOne}"></span>
+							  	<span> : </span>
+						  		<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamTwo}"></span>	  			
 				  			</div>  			
+				  			<div class="col-xs-2">
+				  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
+				  			</div>
      					</div>
      					<div class="row">
 	     					<div class="col-xs-12 button-bar">
