--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -32,10 +32,10 @@
 							<div class="row">
 								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
-										<a th:if="${matchCommand.hasMatchStarted()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId}}">
+										<a th:if="${!matchCommand.isBettable()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId}}">
 											<span class="fa fa-thumbs-o-up fa-2x" title="getippt"></span>
 										</a>
-										<span th:if="${!matchCommand.hasMatchStarted()}" class="fa fa-thumbs-o-up fa-2x" title="getippt"></span>
+										<span th:if="${matchCommand.isBettable()}" class="fa fa-thumbs-o-up fa-2x" title="getippt"></span>
 									</div>
 									<div class="short-div goal_padding">
 										<span class="fa fa-trophy fa-2x" title="Ergebnis"></span>
