--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -111,6 +111,11 @@ img.flag {
 	vertical-align: baseline;
 }
 
+.top-bottom-space {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
 /** justified break point for navigation collapse on tablets */
 @media (max-width: 991px) {
     .navbar-header {
