--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -28,15 +28,15 @@
 					</div>
 					<div class="panel-body">
 						<div class="row" th:each="bet : ${allBetsCommand.allBetsForMatch}">
-							<div class="col-xs-6">
+							<div class="col-xs-6 top-bottom-space">
 								<span th:text="${bet.userName}" class="ranking-name"></span>			  									  		
 				  			</div>					
-				  			<div class="col-xs-4">				
+				  			<div class="col-xs-4 top-bottom-space">
 				  				<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamOne}"></span>
 							  	<span> : </span>
 						  		<span class="label label-as-badge big-badge label-success" th:text="${bet.goalsTeamTwo}"></span>	  			
 				  			</div>  			
-				  			<div class="col-xs-2">
+				  			<div class="col-xs-2 top-bottom-space">
 				  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
 				  			</div>
      					</div>
