--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 <head>
-	<title>Noch nicht getippt</title>
+	<title th:text="#{bet.listOpen.title}"></title>
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}">Some Success message</div>
-		<h1 th:if="${not #lists.isEmpty(matchesToBet)}">Noch nicht getippt</h1>
+		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
+		<h1 th:if="${not #lists.isEmpty(matchesToBet)}" th:text="#{bet.listOpen.title}"></h1>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4" th:each="matchCommand : ${matchesToBet}">
 				<div class="panel panel-default">
@@ -15,15 +15,15 @@
 						<div class="col-xs-9">
 							<div class="row">
 								<img class="flag" th:if="${matchCommand.isShowCountryIcons()}" th:src="@{${matchCommand.getIconPathTeamOne()}}"/>
-								<span class="bold" th:text="${matchCommand.teamNameOne}">Deutschland</span>
+								<span class="bold" th:text="${matchCommand.teamNameOne}"></span>
 								<span> - </span>
 								<img class="flag" th:if="${matchCommand.isShowCountryIcons()}" th:src="@{${matchCommand.getIconPathTeamTwo()}}"/>
-								<span class="bold" th:text="${matchCommand.teamNameTwo}">Italien</span>
+								<span class="bold" th:text="${matchCommand.teamNameTwo}"></span>
 								<br/>
-								<span th:text="${#temporals.format(matchCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}">Fr 04.08.2015, 19:15 Uhr</span>
+								<span th:text="${#temporals.format(matchCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
 								<br/>
 								<span th:text="#{${matchCommand.group.titleMsgKey}}"></span><span>,</span>
-								<span th:text="${matchCommand.stadium}">Stadium</span>
+								<span th:text="${matchCommand.stadium}"></span>
 							</div>							  		
 			  			</div>		
 			  			<div class="col-xs-3 button-bar">
