--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 <head>
-	<title>Matchergebnis editieren</title>
+	<title th:text="#{matches.matchresult.title}"></title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
@@ -35,8 +35,8 @@
 						</table>												
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary">Speichern</button>
-						<a href="#" th:href="@{/matches}" class="btn btn-default" role="button">Abbrechen</a>	
+						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+						<a href="#" th:href="@{/matches}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
 					</div>
 				</div>
 			</div>
