--- a/src/main/resources/templates/userprofile/change_password.html
+++ b/src/main/resources/templates/userprofile/change_password.html
@@ -2,29 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 <head>
-<title>Passwort ändern</title>
+	<title th:text="#{userprofile.changePassword.title}"></title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}">Some Success message</div>
+		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
 		<form id="changePasswordForm" th:action="@{/userprofile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
-						<label for="oldPassword">altes Passwort:</label> 
+						<label for="oldPassword" th:text="#{userprofile.changePassword.oldPassword} + ':'"></label> 
 						<input type="password" th:field="*{oldPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<label for="newPassword">neues Passwort:</label> 
+						<label for="newPassword" th:text="#{userprofile.changePassword.newPassword} + ':'"></label> 
 						<input type="password" th:field="*{newPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<label for="newPasswordRepeat">neues Passwort wiederholen:</label> 
+						<label for="newPasswordRepeat" th:text="#{userprofile.changePassword.newPasswordRepeat} + ':'"></label> 
 						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary">Speichern</button>
-						<a href="#" th:href="@{/}" class="btn btn-default" role="button">Abbrechen</a>	
+						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+						<a href="#" th:href="@{/}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
 					</div>
 				</div>
 			</div>
