--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -42,7 +42,7 @@
      					</div>
      					<div class="row">
 	     					<div class="col-xs-12 button-bar">
-					  			<a th:href="@{/matches}" class="btn btn-default" role="button" th:text="${button.back}"></a>
+					  			<a th:href="@{/matches}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 					  		</div>
      					</div>
 				   </div>					   
