--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -13,35 +13,31 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.finalWinner} + ':'"></label><br/>
+						<label th:text="#{extra_bets.finalWinner} + ':'"></label>
+						<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsFinalWinner})}"></span>
+						<br/>
 						<select th:field="*{finalWinner}" class="form-control">
 						  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
 						</select>
-					</div>
-					<div class="form-group">
-						<label th:text="#{extra_bets.reachablePoints} + ':'"></label>
-						<span class="label label-default label-as-badge big-badge" th:text="${extraBetCommand.reachablePointsFinalWinner}"></span>												
-					</div>
+					</div>					
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.semiFinalWinner} + ':'"></label><br/>
+						<label th:text="#{extra_bets.semiFinalWinner} + ':'"></label>
+						<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsSemiFinalWinner})}"></span>
+						<br/>
 						<select th:field="*{semiFinalWinner}" class="form-control">
 						  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
 						</select>
 					</div>
-					<div class="form-group">
-						<label th:text="#{extra_bets.reachablePoints} + ':'"></label>
-						<span class="label label-default label-as-badge big-badge" th:text="${extraBetCommand.reachablePointsSemiFinalWinner}"></span>												
-					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.points} + ':'"></label>
+						<label th:text="#{extra_bets.reachedPoints} + ':'"></label>
 						<span class="label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
 					  					      th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>												
 					</div>
