--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -13,40 +13,55 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.finalWinner} + ':'"></label>
-						<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsFinalWinner})}"></span>
-						<br/>
-						<select th:field="*{finalWinner}" class="form-control">
-						  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
-						</select>
+						<div class="panel panel-success">
+							<div class="panel-heading">
+								<label th:text="#{extra_bets.finalWinner} + ':'"></label>
+								<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsFinalWinner})}"></span>
+							</div>
+							<div class="panel-body">
+								<select th:field="*{finalWinner}" class="form-control">
+								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+								</select>
+							</div>
+						</div>
 					</div>					
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.semiFinalWinner} + ':'"></label>
-						<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsSemiFinalWinner})}"></span>
-						<br/>
-						<select th:field="*{semiFinalWinner}" class="form-control">
-						  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
-						</select>
+						<div class="panel panel-warning">
+							<div class="panel-heading">
+								<label th:text="#{extra_bets.semiFinalWinner} + ':'"></label>
+								<span class="right" th:text="#{extra_bets.points(${extraBetCommand.reachablePointsSemiFinalWinner})}"></span>
+							</div>
+							<div class="panel-body">
+								<select th:field="*{semiFinalWinner}" class="form-control">
+								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+								</select>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<label th:text="#{extra_bets.reachedPoints} + ':'"></label>
-						<span class="label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
-					  					      th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>												
+						<div class="panel panel-warning">
+							<div class="panel-heading">
+								<span th:text="#{extra_bets.reachedPoints} + ':'"></span>
+								<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
+					  					      th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>
+							</div>
+						</div>													
 					</div>
 				</div>
 			</div>
-			<div class="row" th:if="${extraBetCommand.points == null}">
+			<div class="row" th:if="${!extraBetCommand.isFinalMatchFinished()}">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>							
+						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+						<a href="#" th:href="@{/bet/open}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
 					</div>
 				</div>
 			</div>
