--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -17,7 +17,7 @@
 					</div>					
 					<ul class="list-group">
 						<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
-							<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${userCommand.isUserItself()}" /> 
+							<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${userCommand.isRoleSelectionDisabled()}" /> 
 							<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
 						</li>
 					</ul>
