--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -11,6 +11,7 @@
 		<form id="betForm" th:action="@{/bet}" th:object="${betCommand}" action="#" method="post" role="form">			
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
+					<h3 th:text="#{bet.edit.heading}"></h3>
 					<input type="hidden" th:field="*{betId}" class="form-control" />
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<input type="hidden" th:field="*{countryTeamOne}" class="form-control" />
