--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -18,7 +18,7 @@
 					<ul class="list-group">
 						<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
 							<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${userCommand.isRoleSelectionDisabled()}" /> 
-							<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+							<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
 						</li>
 					</ul>
 					<div class="form-group" sec:authorize="hasAuthority('PERM_PASSWORD_RESET')">
