--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -26,14 +26,31 @@
 									<th>
 										<img class="flag" th:if="${betCommand.isShowCountryIcons()}" th:src="@{${betCommand.getIconPathTeamTwo()}}"/>
 										<span th:text="${betCommand.teamNameTwo}" class="teamName"></span>
-									</th>
+									</th>									
 								</tr>
 							</thead>
 							<tbody>
 								<tr class="success">
 									<td><input type="text" th:field="*{goalsTeamOne}" class="form-control form-size-small" /></td>
 									<td><input type="text" th:field="*{goalsTeamTwo}" class="form-control form-size-small" /></td>
+								</tr>								
+							</tbody>
+						</table>												
+					</div>
+					<div class="form-group">
+						<table class="table center">
+							<thead>
+								<tr>
+									<th colspan="2">
+										<span>Gewinner nach 11 Meter schießen</span>
+									</th>
 								</tr>
+							</thead>
+							<tbody>
+								<tr class="success">
+									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="true" class="center"/></td>
+									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="false" class="center"/></td>
+								</tr>								
 							</tbody>
 						</table>												
 					</div>
