penalty winner result

--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -48,8 +48,8 @@
 							</thead>
 							<tbody>
 								<tr class="success">
-									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="true" class="center"/></td>
-									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="false" class="center"/></td>
+									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="true" /></td>
+									<td><input type="radio" th:field="*{penaltyWinnerOne}" value="false" /></td>
 								</tr>								
 							</tbody>
 						</table>												
