--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -37,7 +37,7 @@
 							</tbody>
 						</table>												
 					</div>
-					<div class="form-group">
+					<div class="form-group" th:if="${!betCommand.isGroupMatch()}">
 						<table class="table center">
 							<thead>
 								<tr>
